Remove email validation from the system when a user signups just show a message account created successfully and move to login screen solving issue for sidebar closing and input field spacing corrected

--- a/src/app/template/sidebar-header/head.component.scss
+++ b/src/app/template/sidebar-header/head.component.scss
@@ -644,7 +644,9 @@ a:focus {
 
 .sidebar-active {
   .sidemenu-wrapper {
+    @media screen and (max-width:600px) {
     display: initial;
+    }
   }
   #sidebar {
     // margin-left: -250px;
